--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build && tailwindcss -i ./public/styles/input.css -o ./public/styles/output.css --minify",
+    "dev": "vite dev",
+    "watch": "npx tailwindcss -i ./public/styles/input.css -o ./public/styles/output.css --watch",
+    "build": "vite build && npx tailwindcss -i ./public/styles/input.css -o ./public/styles/output.css --minify",
     "lint": "eslint .",
     "preview": "vite preview"
   },
@@ -17,7 +18,8 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.7.1",
-    "tailwindcss": "^4.1.11"
+    "tailwindcss": "^4.1.11",
+    "typed.js": "^2.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
