Refactor homepage components with enhanced styling and animations; update Navbar and HeroBanner for improved UI consistency; add new routes for homepage accessibility; adjust Tailwind CSS configuration for new color scheme.

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "vite dev",
     "watch": "npx tailwindcss -i ./public/styles/input.css -o ./public/styles/output.css --watch",
-    "build": "vite build && npx tailwindcss -i ./public/styles/input.css -o ./public/styles/output.css",
+    "build": "vite build",
+    "build:css": "npx tailwindcss -i ./public/styles/input.css -o ./public/styles/output.css",
     "lint": "eslint .",
     "preview": "vite preview"
   },
