--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "Simple email API for OmniVest",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
+    "start": "node server",
     "build-client": "cd ./client/ && npm run build && cd ..",
-    "dev": "nodemon index.js"
+    "dev": "nodemon server"
   },
   "dependencies": {
     "cors": "^2.8.5",
