--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite dev",
+    "test": "vitest",
     "watch": "npx tailwindcss -i ./public/styles/input.css -o ./public/styles/output.css --watch",
     "build": "vite build",
     "build:css": "npx tailwindcss -i ./public/styles/input.css -o ./public/styles/output.css",
@@ -24,6 +25,10 @@
     "typed.js": "^2.1.0"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.0.2",
+    "@testing-library/react": "^15.0.0",
+    "@testing-library/user-event": "^14.5.0",
+    "vitest": "^1.0.0",
     "@eslint/js": "^9.30.1",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
