--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "vitest",
     "watch": "npx tailwindcss -i ./public/styles/input.css -o ./public/styles/output.css --watch",
     "build": "vite build",
-    "build:css": "npx tailwindcss -i ./public/styles/input.css -o ./public/styles/output.css",
+    "prebuild": "npx tailwindcss -i ./public/styles/input.css -o ./public/styles/output.css",
     "lint": "eslint .",
     "preview": "vite preview"
   },
